--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="root_access_request_cta">Check for root access</string>
     <string name="nav_info">Info</string>
     <string name="nav_tweaks">Tweaks</string>
+    <string name="default_terminal_output">Run a tweak to see its output here.\n\n</string>
+    <string name="tweaks_disabled_main">We can\'t be certain that your device is a Google Pixel with a Shannon modem.</string>
+    <string name="tweaks_disabled_supporting_1">These tweaks and settings will only work on a Google Pixel with a Shannon modem.</string>
+    <string name="tweaks_disabled_supporting_2">Until we can determine your device is compatible, you cannot apply any tweaks.</string>
 </resources>
